Added new columns into courselist

--- a/templates/contingent_list.html
+++ b/templates/contingent_list.html
@@ -3,6 +3,9 @@
 {% block content %}
 {% csrf_token %}
 <style>
+    .handsontable th {
+        white-space: normal!important;
+    }
     .wtHider{
         width:150px !important;
     }
@@ -60,17 +63,21 @@ let columns = [
     	data: 'subgroup',
     	title: 'Количество подгрупп',
     },
+<!--    {-->
+<!--        data: 'rs',-->
+<!--        title: 'Количество обучающихся за счет бюджета РС(Я)',-->
+<!--    },-->
+<!--    {-->
+<!--        data: 'rf',-->
+<!--        title: 'Количество обучающихся за счет бюджета РФ',-->
+<!--    },-->
+<!--    {-->
+<!--    	data: 'd',-->
+<!--    	title: 'Количество обучающихся по договору',-->
+<!--    },-->
     {
     	data: 'amount',
-    	title: 'Количество студентов',
-    },
-    {
-        data: 'rs',
-        title: 'Количество обучающихся за счет бюджета РС(Я)',
-    },
-    {
-        data: 'rf',
-        title: 'Количество обучающихся за счет бюджета РФ',
+    	title: 'Общее количество студентов',
     },
     {
         data: 'buttons',
