--- a/templates/logs.html
+++ b/templates/logs.html
@@ -1,12 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Успешно!</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+{% load widget_tweaks %}
+{% block title %}Загрузка рабочего учебного плана{% endblock %}
+{% block content %}
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <div style="position:fixed;top:0;left:0;width:100%;z-index:100;" id="error-container">
+                    <div class="alert alert-danger" role="alert" id="error">{{ err_msg }}</div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 offset-md-3">
+                <form action="" method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <h1>Список пользователей успешно загружен!</h1>
+                   
+                </form>
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
+{% block scripts %}
+if("{{ err_msg }}".length > 0){
+    $('#error').delay(3000).slideUp(500, function() {$(this).hide();});
+}else{
+    $('#error').hide();
+}
+{% endblock %}
