Added new columns into contingentlist

--- a/templates/contingent_list.html
+++ b/templates/contingent_list.html
@@ -32,6 +32,7 @@
 </nav>
 
 <h1>Список контингента студентов</h1>
+<input type="text" id="filterInput" placeholder="Введите фильтр">
 <br>
 <div id="contingentlist" class="hot"></div>
 <br>
@@ -63,21 +64,25 @@ let columns = [
     	data: 'subgroup',
     	title: 'Количество подгрупп',
     },
-<!--    {-->
-<!--        data: 'rs',-->
-<!--        title: 'Количество обучающихся за счет бюджета РС(Я)',-->
-<!--    },-->
-<!--    {-->
-<!--        data: 'rf',-->
-<!--        title: 'Количество обучающихся за счет бюджета РФ',-->
-<!--    },-->
-<!--    {-->
-<!--    	data: 'd',-->
-<!--    	title: 'Количество обучающихся по договору',-->
-<!--    },-->
     {
     	data: 'amount',
     	title: 'Общее количество студентов',
+    },
+    {
+    	data: 'edu_type',
+    	title: 'Форма обучения',
+    },
+    {
+        data: 'rf',
+        title: 'Количество обучающихся за счет бюджета РФ',
+    },
+    {
+        data: 'rsa',
+        title: 'Количество обучающихся за счет бюджета РС(Я)',
+    },
+    {
+    	data: 'd',
+    	title: 'Количество обучающихся по договору',
     },
     {
         data: 'buttons',
@@ -136,9 +141,4 @@ saveButton.addEventListener('click', () => {
 });
 
 
-
-
-function test1() {
-    console.log('1');
-}
 {% endblock %}
