Added teacher id into url for export kup

--- a/templates/course_list.html
+++ b/templates/course_list.html
@@ -6,7 +6,7 @@
     .handsontable thead th {
         height: 260px;
     }
-    .handsontable thead th .relative{
+    .handsontable thead th .relative {
         transform: rotate(90deg);
         bottom: 20px;
         margin-top: -20px;
@@ -14,6 +14,9 @@
     .handsontable span.colHeader {
         line-height: 100px;
         margin-left: 70px;
+    }
+    .handsontable span.colHeader:nth-child(-n+6):nth-child(n+2) {
+        margin-left: 150px;
     }
     .wtHider{
         width:250px !important;
