--- a/templates/logs.html
+++ b/templates/logs.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load widget_tweaks %}
-{% block title %}Загрузка рабочего учебного плана{% endblock %}
+{% block title %}Успешно!{% endblock %}
 {% block content %}
     <div class="container">
         <div class="row">
