--- a/templates/users_upload.html
+++ b/templates/users_upload.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load widget_tweaks %}
-{% block title %}Загрузка рабочего учебного плана{% endblock %}
+{% block title %}Загрузка пользователей{% endblock %}
 {% block content %}
     <div class="container">
         <div class="row">
