--- a/templates/upload_file.html
+++ b/templates/upload_file.html
@@ -9,6 +9,7 @@
             <br>
             <div class="row">
                 <div class="col-md-6 offset-md-3">
+                    {{ content }}
                     {% for field in form.visible_fields %}
                         <div class="form-group">
                             {% render_field field class="form-control" %}
@@ -22,5 +23,4 @@
 {% endblock %}
 
 <!--{% block scripts %}-->
-<!--.then(request)-->
 <!--{% endblock %}-->
