Added info window prototype

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,8 @@
         <link rel="stylesheet" href="{% static 'css/handsontable/jexcel.css' %}" type="text/css">
 <!--        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/handsontable/dist/handsontable.full.min.css" />-->
         <script src="{% static 'js/keyvalue.js' %}"></script>
+        <script src="https://unpkg.com/@popperjs/core@2"></script>
+        <script src="https://unpkg.com/tippy.js@6"></script>
         <title>{% block title %}{% endblock %}</title>
     </head>
     <body>
